--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "HW6 Visualizations"
 description: "Interactive visualizations for HW6 using Altair and Jekyll"
-baseurl: "/HW6" 
+baseurl: "/IS445_HW6" 
 url: "https://WJHWJH1208.github.io"
 markdown: kramdown
 theme: minima
